--- a/ubus/app/src/Ubus.Application/Views/Shared/_Layout.cshtml
+++ b/ubus/app/src/Ubus.Application/Views/Shared/_Layout.cshtml
@@ -3,36 +3,55 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Ubus.Application</title>
+    <title>Ubus</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Ubus.Application</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light box-shadow">
+            @*<div class="">*@
+                <div style="display: flex; justify-content: start">
+                    <img class="logo" src="~/images/logo.png" />
+                    <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><span>Ubus</span></a>
+                </div>
+                <button class="btn btn-menu" id="menu-toggle"><span class="navbar-toggler-icon"></span></button>
+                @*<button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+                </button>*@
+                @*<div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+            <ul class="navbar-nav flex-grow-1">
+                <li class="nav-item">
+                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                </li>
+            </ul>
+        </div>*@
+            @*</div>*@
         </nav>
     </header>
-    <div class="container">
+    <div class="d-flex" id="wrapper">
         <main role="main" class="pb-3">
-            @RenderBody()
+            <div class="bg-light border-right" id="sidebar-wrapper">
+                <div class=" list-group-flush">
+                    <a class="list-group-item list-group-item-action bg-info" asp-area="" asp-controller="Trip" asp-action="Index">Viagens</a>
+                    <a class="list-group-item list-group-item-action bg-info" asp-area="" asp-controller="Driver" asp-action="Index">Motoristas</a>
+                    <a class="list-group-item list-group-item-action bg-info" asp-area="" asp-controller="Additional" asp-action="Index">Adicionais</a>
+                    <a class="list-group-item list-group-item-action bg-info" asp-area="" asp-controller="Rota" asp-action="Index">Rotas</a>
+                    <a class="list-group-item list-group-item-action bg-info"  asp-area="" asp-controller="Bus" asp-action="Index">Ônibus</a>
+                    @*<a href="#" class="list-group-item list-group-item-action">...</a>*@
+                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                </div>
+            </div>
         </main>
+
+        <div class="container" id="content">
+            @RenderBody()
+        </div>
     </div>
 
     <footer class="border-top footer text-muted">
