--- a/ubus/app/src/Ubus.Application/Views/_ViewImports.cshtml
+++ b/ubus/app/src/Ubus.Application/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using Ubus.Application
-@using Ubus.Application.Models
+@using Ubus.Application.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
