--- a/ubus/app/src/Ubus.Application/wwwroot/css/site.css
+++ b/ubus/app/src/Ubus.Application/wwwroot/css/site.css
@@ -1,10 +1,34 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+.navbar {
+    background-color: #000;
+    color: #ff4254;
+    display: flex;
+    justify-content: space-between;
+}
+
+.logo {
+    width: 17%;
+    height: 27%;
+}
+
+.btn-menu {
+    background-color: #e63b4b;
+}
+
+.navbar-brand span {
+    color: #ff4254;
+}
+/*
+.nav-link {
+    color: #ff4254 !important;'
+}
+*/
 a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+    white-space: normal;
+    text-align: center;
+    word-break: break-all;
 }
 
 /* Provide sufficient contrast against white background */
@@ -60,7 +84,8 @@ html {
 
 body {
   /* Margin bottom by footer height */
-  margin-bottom: 60px;
+  /*margin-bottom: 60px;*/
+  font-family: Arial
 }
 .footer {
   position: absolute;
@@ -68,4 +93,95 @@ body {
   width: 100%;
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
+}
+
+main {
+    height: inherit;
+}
+
+
+#wrapper {
+    overflow-x: hidden;
+    height: 83vh;
+}
+
+#sidebar-wrapper {
+    /*min-height: 100vh;*/
+    margin-left: -15rem;
+    -webkit-transition: margin .60s ease-out;
+    -moz-transition: margin .60s ease-out;
+    -o-transition: margin .60s ease-out;
+    transition: margin .60s ease-out;
+    width: 26vh;
+    overflow: hidden;
+    height: inherit;
+    background-color: #000 !important;
+    /*color: red;*/
+}
+
+
+
+#sidebar-wrapper .sidebar-heading {
+    padding: 0.875rem 1.25rem;
+    font-size: 1.2rem;
+}
+
+/*#sidebar-wrapper .list-group {
+    width: 15rem;
+
+}*/
+
+#page-content-wrapper {
+    min-width: 100vw;
+}
+
+#wrapper.toggled #sidebar-wrapper {
+    margin-left: 0;
+}
+
+#menu-toggle {
+    display: block;
+}
+
+.list-group-item {
+    background-color: #000 !important;
+    color: #ff4254;
+    border-width: 1px;
+    border-color: #dc3545;
+}
+
+@media (min-width: 768px) {
+    #sidebar-wrapper {
+        margin-left: 0;
+    }
+
+    #page-content-wrapper {
+        min-width: 0;
+        width: 100%;
+    }
+
+    #wrapper.toggled #sidebar-wrapper {
+        margin-left: -15rem;
+    }
+
+/*    #menu-toggle {
+        display: none;
+    }*/
+}
+
+
+/* Buttons */
+
+button {
+    background-color: #dc3545 !important;
+}
+
+button:hover {
+    background-color: #b12431 !important;
+}
+
+button,
+select,
+input {
+    max-width: 450px;
 }
